03_ser_app/04_kubernetes/fracturascript-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: facturascript
spec:
  replicas: 1
  selector:
    matchLabels:
      app: facturascript
  template:
    metadata:
      labels:
        app: facturascript
    spec:
      containers:
        - name: facturascript
          image: facturascript/facturascript
          ports:
            - containerPort: 80
---
apiVersion: v1
kind: Service
metadata:
  name: facturascript
spec:
  selector:
    app: facturascript
  ports:
    - protocol: TCP
      port: 80
      targetPort: 80
  type: ClusterIP
