03_ser_app/04_kubernetes/services.yaml
apiVersion: v1
kind: Service
metadata:
  name: nextcloud-nodeport
spec:
  type: NodePort
  selector:
    app: nextcloud
  ports:
    - port: 80
      targetPort: 80
      nodePort: 30080
---
apiVersion: v1
kind: Service
metadata:
  name: facturascript-nodeport
spec:
  type: NodePort
  selector:
    app: facturascript
  ports:
    - port: 80
      targetPort: 80
      nodePort: 30081
