03_ser_app/04_kubernetes/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: nextcloud-ingress
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  rules:
    - host: nextcloud.local
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: nextcloud
                port:
                  number: 80
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: facturascript-ingress
spec:
  rules:
    - host: facturascript.local
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: facturascript
                port:
                  number: 80
